Improved code quality
Renamed DataException to RequestFailedException.