@@ -38,65 +38,86 @@ public class IPlayerService {
 		this.playerServiceBuilder = playerServiceBuilder;
 	}
 	
-	public OwnedGames getRecentlyPlayedGames(long steamId) throws WebApiException, JSONException {
+	public OwnedGames getRecentlyPlayedGames(long steamId) throws WebApiException {
 		return getRecentlyPlayedGames(steamId, 0);
 	}
 
-	public OwnedGames getRecentlyPlayedGames(long steamId, int count) throws WebApiException, JSONException {
+	public OwnedGames getRecentlyPlayedGames(long steamId, int count) throws WebApiException {
 		HashMap<String, Object> params = new HashMap<String, Object>();
 		params.put(WebApiConstants.REQUEST_PARAM_STEAM_ID, Long.toString(steamId));
 		params.put(WebApiConstants.REQUEST_PARAM_COUNT, Integer.toString(count));
 
-		JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_RECENTLY_PLAYED_GAMES, 1, params);
-		return playerServiceBuilder.buildRecentlyPlayedGames(data);
+		try {
+			JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_RECENTLY_PLAYED_GAMES, 1, params);
+			return playerServiceBuilder.buildRecentlyPlayedGames(data);
+        } catch(JSONException e) {
+            throw new WebApiException(WebApiConstants.ERR_COULD_NOT_PARSE_JSON_DATA, e);
+        }
 	}
 
-	public OwnedGames getOwnedGames(long steamId) throws WebApiException, JSONException {
+	public OwnedGames getOwnedGames(long steamId) throws WebApiException {
 		JSONObject data = callGetOwnedGamesMethod(steamId, false, false);
 		return playerServiceBuilder.buildOwnedGames(data);
 	}
 	
 	//support for the "appids_filter" parameters has not been included, 
-	public OwnedGames getOwnedGames(long steamId, boolean includeAppInfo, boolean includePlayedFreeGames) throws WebApiException, JSONException {
+	public OwnedGames getOwnedGames(long steamId, boolean includeAppInfo, boolean includePlayedFreeGames) throws WebApiException {
 		JSONObject data = callGetOwnedGamesMethod(steamId, includeAppInfo, includePlayedFreeGames);
 		return playerServiceBuilder.buildOwnedGamesWithAppInfo(data);
 	}
 	
-	private JSONObject callGetOwnedGamesMethod(long steamId, boolean includeAppInfo, boolean includePlayedFreeGames) throws WebApiException, JSONException {
+	private JSONObject callGetOwnedGamesMethod(long steamId, boolean includeAppInfo, boolean includePlayedFreeGames) throws WebApiException {
 		HashMap<String, Object> params = new HashMap<String, Object>();
 		params.put(WebApiConstants.REQUEST_PARAM_STEAM_ID, Long.toString(steamId));
-		params.put(WebApiConstants.REQUEST_PARAM_INCLUDE_APPINFO, new Integer(includeAppInfo ? 1 : 0));
-		params.put(WebApiConstants.REQUEST_PARAM_INCLUDE_PLAYED_FREE_GAMES, new Integer(includePlayedFreeGames ? 1 : 0));		
+		params.put(WebApiConstants.REQUEST_PARAM_INCLUDE_APPINFO, Integer.valueOf(includeAppInfo ? 1 : 0));
+		params.put(WebApiConstants.REQUEST_PARAM_INCLUDE_PLAYED_FREE_GAMES, Integer.valueOf(includePlayedFreeGames ? 1 : 0));		
 
-		return WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_OWNED_GAMES, 1, params);
+		try {
+			return WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_OWNED_GAMES, 1, params);
+        } catch(JSONException e) {
+            throw new WebApiException(WebApiConstants.ERR_COULD_NOT_PARSE_JSON_DATA, e);
+        }
 	}
 	
-	public int getSteamLevel(long steamId) throws WebApiException, JSONException {
+	public int getSteamLevel(long steamId) throws WebApiException {
 		HashMap<String, Object> params = new HashMap<String, Object>();
 		params.put(WebApiConstants.REQUEST_PARAM_STEAM_ID, Long.toString(steamId));
-		JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_STEAM_LEVEL, 1, params);
-		return data.getJSONObject(WebApiConstants.RESPONSE_ITEM_RESPONSE).getInt("player_level");
+		try {
+			JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_STEAM_LEVEL, 1, params);
+			return data.getJSONObject(WebApiConstants.RESPONSE_ITEM_RESPONSE).getInt("player_level");
+        } catch(JSONException e) {
+            throw new WebApiException(WebApiConstants.ERR_COULD_NOT_PARSE_JSON_DATA, e);
+        }
 	}
 
-	public PlayerBadgeDetails getBadges(long steamId) throws WebApiException, JSONException {
+	public PlayerBadgeDetails getBadges(long steamId) throws WebApiException {
 		HashMap<String, Object> params = new HashMap<String, Object>();
 		params.put(WebApiConstants.REQUEST_PARAM_STEAM_ID, Long.toString(steamId));
-		JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_BADGES, 1, params);
-		return playerServiceBuilder.buildBadges(data);
+		
+		try {
+			JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_BADGES, 1, params);
+			return playerServiceBuilder.buildBadges(data);
+        } catch(JSONException e) {
+            throw new WebApiException(WebApiConstants.ERR_COULD_NOT_PARSE_JSON_DATA, e);
+        }
 	}
 
-	public Map<Long, Boolean> getCommunityBadgeProgress(long steamId) throws WebApiException, JSONException {
+	public Map<Long, Boolean> getCommunityBadgeProgress(long steamId) throws WebApiException {
 		return getCommunityBadgeProgress(steamId, -1);
 	}
 
-	public Map<Long, Boolean> getCommunityBadgeProgress(long steamId, long badgeId) throws WebApiException, JSONException {
+	public Map<Long, Boolean> getCommunityBadgeProgress(long steamId, long badgeId) throws WebApiException {
 		HashMap<String, Object> params = new HashMap<String, Object>();
 		params.put(WebApiConstants.REQUEST_PARAM_STEAM_ID, Long.toString(steamId));
 		if(badgeId > -1) {
 			params.put(WebApiConstants.REQUEST_PARAM_BADGE_ID, Long.toString(badgeId));
 		}
 
-		JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_COMMUNITY_BADGE_PROGRESS, 1, params);
-		return playerServiceBuilder.buildCommunityBadgesProgress(data);
+		try {
+			JSONObject data = WebApi.getJSONResponse(WebApiConstants.I_PLAYER_SERVICE, WebApiConstants.I_PLAYER_SERVICE_GET_COMMUNITY_BADGE_PROGRESS, 1, params);
+			return playerServiceBuilder.buildCommunityBadgesProgress(data);
+        } catch(JSONException e) {
+            throw new WebApiException(WebApiConstants.ERR_COULD_NOT_PARSE_JSON_DATA, e);
+        }
 	}
 }
